--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
+      font-size: 18px; /* Schriftgröße um 2 Punkte erhöht */
       margin: 0;
       padding: 0;
       display: flex;
@@ -26,6 +27,11 @@
 
     h1 {
       text-align: center;
+      font-size: 24px; /* Schriftgröße erhöht */
+    }
+
+    h3 {
+      font-size: 20px; /* Schriftgröße erhöht */
     }
 
     .category {
@@ -42,6 +48,7 @@
     button {
       margin: 5px;
       padding: 10px 20px;
+      font-size: 18px; /* Schriftgröße erhöht */
       border: none;
       border-radius: 5px;
       background-color: #007bff;
@@ -57,6 +64,7 @@
       width: 100%;
       height: 100px;
       margin-top: 10px;
+      font-size: 16px; /* Schriftgröße erhöht */
       border-radius: 5px;
     }
 
