--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      font-size: 18px; /* Schriftgröße um 2 Punkte erhöht */
+      font-size: 18px;
       margin: 0;
       padding: 0;
       display: flex;
@@ -27,11 +27,11 @@
 
     h1 {
       text-align: center;
-      font-size: 24px; /* Schriftgröße erhöht */
+      font-size: 24px;
     }
 
     h3 {
-      font-size: 20px; /* Schriftgröße erhöht */
+      font-size: 20px;
     }
 
     .category {
@@ -48,7 +48,7 @@
     button {
       margin: 5px;
       padding: 10px 20px;
-      font-size: 18px; /* Schriftgröße erhöht */
+      font-size: 18px;
       border: none;
       border-radius: 5px;
       background-color: #007bff;
@@ -64,7 +64,7 @@
       width: 100%;
       height: 100px;
       margin-top: 10px;
-      font-size: 16px; /* Schriftgröße erhöht */
+      font-size: 16px;
       border-radius: 5px;
     }
 
@@ -119,13 +119,13 @@
     <textarea id="notes" placeholder="Notizen"></textarea>
     <button onclick="saveEntry()">Speichern</button>
     <button onclick="toggleHistory()">Historie anzeigen</button>
-    <button onclick="exportToCSV()">Daten exportieren</button>
-    <button onclick="importCSV()">Daten importieren</button>
-    <input type="file" id="csvFileInput" accept=".csv" style="display:none;" onchange="handleFile(event)">
 
     <div id="history" class="history hidden">
       <h3>Historie</h3>
       <ul id="historyList"></ul>
+      <button onclick="exportToCSV()">Daten exportieren</button>
+      <button onclick="importCSV()">Daten importieren</button>
+      <input type="file" id="csvFileInput" accept=".csv" style="display:none;" onchange="handleFile(event)">
     </div>
   </div>
 
