index.html aktualisieren
Hinzufügen von Begleitsymptom Sonne

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
       <button onclick="toggleSelection(this)">Wenig getrunken</button>
       <button onclick="toggleSelection(this)">Gefroren</button>
       <button onclick="toggleSelection(this)">Nackenverspannung</button>
+      <button onclick="toggleSelection(this)">Sonne</button>
     </div>
 
     <div class="category medikamente">
